--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,7 +1,17 @@
 .projectImg{
     align-content: center;
-    width: 1000px;
-    padding: 20px;
-    background-color: white;
+    width: 800px;
+    padding: 30px;
     margin: auto;
+}
+
+.container{
+    margin-top: 80px;
+    vertical-align: auto;
+}
+
+.card { 
+    color: white;
+    background-color: rgba(58, 73, 95, 0.65) !important;
+    box-shadow: 0px 0px 5px;
 }
