--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,6 @@
   padding: 0;
 }
 
-html { 
-  
-}
-
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.4;
@@ -26,4 +22,7 @@ a {
 
 .container {
   padding: 0 1rem;
+}
+p{
+  padding: 30px;
 }
