--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,5 +6,6 @@
     line-height: 60px;
     background-color: #f5f5f5;
     text-align: center;
-    opacity: 0.65;
+    opacity: 0.95;
+    box-shadow: 0px 0px 5px;
 }
