--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,11 @@
-.navbar{
-    background-color: rgb(127, 144, 168);
-    box-shadow: 0px 0px 5px;
-    opacity: 0.85;
+.navbar {
+  background-color: rgb(127, 144, 168);
+  box-shadow: 0px 0px 5px;
+  opacity: 0.95;
 }
 
-#brandName{
-font-family: 'Major Mono Display', monospace;
-font-size: 30px;
-color: rgb(231, 240, 247);
+#brandName {
+  font-family: "Major Mono Display", monospace;
+  font-size: 30px;
+  color: rgb(231, 240, 247);
 }
